<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, SudokuActivity!</string>
    <string name="app_name">Sudoca</string>
    <string name="msg_default_status">Place a sudoku inside the viewfinder rectangle to scan it.</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="button_ok">OK</string>
    <string name="btCapture">Open camera</string>
    <string name="btResume">Resume game</string>
    <string name="btGallery">Open gallery</string>
    <string name="btOpenGame">Open game</string>
    <string name="btSolve">Solve</string>
    <string name="btPlay">Play</string>
    <string name="dimention">none</string>
    <string name="msg_process_image">Process image wait&#8230;</string>
    <string name="close">Close</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="select_number">Select number</string>
    <string name="edit_note">Edit note</string>
    <string name="add_folder">Add folder</string>
    <string name="import_file">Import</string>
    <string name="import_file_title">Import file %s</string>
    <string name="about">About</string>
    <string name="rename_folder">Rename folder</string>
    <string name="delete_folder">Delete folder</string>
    <string name="rename_folder_title">Rename %s</string>
    <string name="delete_folder_title">Delete %s</string>
    <string name="delete_folder_confirm">Are you sure you want to delete this folder?</string>
    <string name="no_puzzles">No puzzles</string>
    <string name="one_puzzle">1 puzzle</string>
    <string name="n_puzzles">%s puzzles</string>
    <string name="all_solved">all solved</string>
    <string name="n_solved">%s solved</string>
    <string name="n_unsolved">%s unsolved</string>
    <string name="n_playing">%s playing</string>
    <string name="solved">Solved</string>
    <string name="playing">Playing</string>
    <string name="not_started">Not started</string>
    <string name="last_played_at">Last played %s</string>
    <string name="created_at">Created %s</string>
    <string name="at_time">at %s</string>
    <string name="yesterday_at_time">yesterday at %s</string>
    <string name="on_date">on %s</string>
    <string name="add_sudoku">Add sudoku</string>
    <string name="filter">Filter</string>
    <string name="filter_by_gamestate">Filter by game state</string>
    <string name="folders">Folders</string>
    <string name="delete_puzzle_confirm">Are you sure you want to delete selected puzzle?</string>
    <string name="reset_puzzle_confirm">Are you sure you want to reset selected puzzle?</string>
    <string name="play_puzzle">Play this puzzle</string>
    <string name="reset_puzzle">Reset puzzle</string>
    <string name="edit_puzzle">Edit puzzle</string>
    <string name="delete_puzzle">Delete puzzle</string>
    <string name="filter_active">Filtered: %s</string>
    <string name="undo">Undo</string>
    <string name="clear_all_notes">Clear all notes</string>
    <string name="fill_in_notes">Fill in notes</string>
    <string name="restart">Restart</string>
    <string name="congrats">Congratulations, you have solved the puzzle in %s.</string>
    <string name="restart_confirm">Are you sure you want to restart this game?</string>
    <string name="well_done">Well Done!</string>
    <string name="clear_all_notes_confirm">Are you sure you want to clear all notes?</string>
    <string name="settings">Settings</string>
    <string name="game_settings">Game settings</string>
    <string name="game_helpers">Game Helpers</string>
    <string name="highlight_wrong_values">Highlight wrong values</string>
    <string name="highlight_wrong_values_summary">Highlight values which break rules of sudoku.</string>
    <string name="input_methods">Input Modes</string>
    <string name="popup">Popup</string>
    <string name="popup_summary">Edit cell value and note in popup.</string>
    <string name="single_number">Single number</string>
    <string name="single_number_summary">Select number, then just tap on cell to set its value or note.</string>
    <string name="numpad">Numpad</string>
    <string name="numpad_summary">Show numpad which acts as standard numeric keyobard.</string>
    <string name="numpad_move_right">Move right on press</string>
    <string name="numpad_move_right_summary">Moves cell selection by one cell right when number button is pressed.</string>
    <string name="welcome">Welcome</string>
    <string name="hint">Hint</string>
    <string name="help">Help</string>
    <string name="that_is_all">That\'s all</string>
    <string name="first_run_hint">There are several input modes which you can use to fill in the puzzle. In order to help you get familiar with these modes there will be several hints displayed as you go through them.\n\nYou can disable these hints in game settings.\n</string>
    <string name="im_single_number_hint">You\'re now in the <i>Single number</i> input mode. First select any number button by pressing it. Then just tap on cells in which you want to have selected number filled.\n\nPress <i>Pencil</i> button to toggle cell\'s note editing.\n</string>
    <string name="im_numpad_hint">You\'re now in the <i>Numpad</i> input mode. Buttons act as a standard numeric keyboard.\n\nPress <i>Pencil</i> button to toggle cell\'s note editing.\n</string>
    <string name="im_disable_modes_hint">Please remember that you don\'t have to use all input modes. You can disable any of them in the game settings.\n\nYou can also use the keyboard and trackball to control the game. If you want to enter notes using keyboard, press number with alt or shift.\n</string>
    <string name="game">Game</string>
    <string name="show_hints">First launch hints</string>
    <string name="show_hints_summary">Show hints which will guide you through application controls.</string>
    <string name="show_time">Show time</string>
    <string name="show_time_summary">Show time during gameplay.</string>
    <string name="puzzle_inserted">New puzzle has been saved.</string>
    <string name="puzzle_updated">Puzzle has been updated.</string>
    <string name="puzzles_saved">Puzzles have been saved into \'%s\' folder.</string>
    <string name="no_puzzles_found">No puzzles found.</string>
    <string name="unknown_import_error">Unknown error occurred while importing puzzles, import was canceled.</string>
    <string name="invalid_format">Invalid format, import was canceled.</string>
    <!-- Strings added in 0.7.0 -->
    <string name="loading">Loading&#8230;</string>
    <!-- Strings added/changed in 0.7.1 -->
    <string name="more_settings">More settings</string>
    <string name="screen_border_size">Screen border size</string>
    <string name="screen_border_size_summary">Some displays do not react to touches on screen edges. This could help in such case.</string>
    <string name="highlight_touched_cell">Highlight cell on touch</string>
    <string name="highlight_touched_cell_summary">Highlights row and column of touched cell.</string>
    <string name="export">Export</string>
    <string name="export_folder">Export folder</string>
    <string name="export_all_folders">Export all folders</string>
    <string name="folders_created">%s folders have been imported.</string>
    <string name="importing">Importing puzzles&#8230;</string>
    <string name="exporting">Exporting puzzles&#8230;</string>
    <string name="unknown_export_error">Unknown error occurred while exporting puzzles.</string>
    <string name="highlight_completed_values">Highlight completed numbers</string>
    <string name="highlight_completed_values_summary">Highlight buttons for numbers which has been entered 9 times.</string>
    <string name="save_to_sdcard">Save to sdcard</string>
    <string name="send_by_mail">Send by mail</string>
    <string name="theme">Theme</string>
    <string name="theme_summary">Select color theme for puzzle board.</string>
    <string name="select_theme">Select theme</string>
    <string name="filename">Filename</string>
    <string name="directory">Directory</string>
    <string name="sdcard_not_found">SD card not found.</string>
    <string name="puzzles_have_been_exported">Puzzles have been exported to %s.</string>
    <string name="file_exists">File already exists, do you want to overwrite it?</string>
    <!-- localization of default folder names -->
    <string name="difficulty_hard">Hard</string>
    <string name="difficulty_medium">Medium</string>
    <string name="difficulty_easy">Easy</string>
    <!-- Strings added/changed in 1.1.0 -->
    <string name="generate_sudoku">Generate new game</string>
    <string name="select_difficulty">Select difficulty</string>
    <string name="generating">Generating puzzle&#8230;</string>
    <string name="show_number_totals">Show Number Totals</string>
    <string name="show_number_totals_summary">Displays count of each number placed.</string>
    <string name="what_is_new">What\'s new</string>
    <string-array name="menuTitles">
        <item>РРјРёС‚Р°С†РёСЏ Р·Р°С…РІР°С‚Р°</item>
        <item>РРіСЂР°С‚СЊ</item>
        <item>Р—Р°С…РІР°С‚ СЃ РєР°РјРµСЂС‹</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>РўРµСЃС‚ СЂР°СЃРїРѕР·РЅР°РІР°РЅРёСЏ</item>
        <item>РўРµСЃС‚ РѕСЂРёРµРЅС‚Р°С†РёРё</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
	<string name="btTestTess">Test tess API</string>
	<string name="button_play">Play</string>
	<string name="button_solve">Solve</string>
	<string name="ooops">Ooops! Что-то пошло не так...</string>
	<string name="whats_happened">Что произошло:</string>
	<string name="whats_happened_exp">Очень жаль, но во время распознавания некоторые цифры были распознаны не верно. В итоге получившаяся судоку содержит ошибки и не может быть решена.</string>
	<string name="whats_next">Что делать дальше:</string>
	<string name="whats_next_exp">1. Попробуйте еще раз. Для этого нажмите кнопку Повторить. Очень надеюсь, что со второго раза у Вас получится. Попробуйте поменять освещенность или положение камеры.\n\n2. Если ошибка повторяется несколоко раз то я буду очень признателен если Вы сообщите об ошибке мне. Для этого нажмите на кнопку Сообщить. В тело письма будет помещена картинка и отладочная информация.</string>
	<string name="try_again">Повторить</string>
	<string name="sent_email">Сообщить</string>
</resources>
