<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<hram.sudoku.view.MyPreferenceCategory 
	    android:title="@string/game_helpers">
	    
		<CheckBoxPreference
				android:key="highlight_wrong_values"
				android:title="@string/highlight_wrong_values"
				android:summary="@string/highlight_wrong_values_summary"
				android:defaultValue="true"/>
		<CheckBoxPreference
				android:key="highlight_completed_values"
				android:title="@string/highlight_completed_values"
				android:summary="@string/highlight_completed_values_summary"
				android:defaultValue="true"/>
		<CheckBoxPreference
				android:key="show_number_totals"
				android:title="@string/show_number_totals"
				android:summary="@string/show_number_totals_summary"
				android:defaultValue="false"/>
	</hram.sudoku.view.MyPreferenceCategory>
	<hram.sudoku.view.MyPreferenceCategory
			android:title="@string/input_methods">
		<CheckBoxPreference
				android:key="im_single_number"
				android:title="@string/single_number"
				android:summary="@string/single_number_summary"
				android:defaultValue="true"/>
		<CheckBoxPreference
				android:key="im_numpad"
				android:title="@string/numpad"
				android:summary="@string/numpad_summary"
				android:defaultValue="true"/>
		<CheckBoxPreference
				android:key="im_numpad_move_right"
				android:title="@string/numpad_move_right"
				android:summary="@string/numpad_move_right_summary"
				android:defaultValue="false"/>
	</hram.sudoku.view.MyPreferenceCategory>
	<hram.sudoku.view.MyPreferenceCategory
			android:title="@string/game">
		<!-- 
		<CheckBoxPreference
				android:key="show_time"
				android:title="@string/show_time"
				android:summary="@string/show_time_summary"
				android:defaultValue="true"/>
		 -->
		<CheckBoxPreference
				android:key="show_hints"
				android:title="@string/show_hints"
				android:summary="@string/show_hints_summary"
				android:defaultValue="true"/>
		<CheckBoxPreference
				android:key="highlight_touched_cell"
				android:title="@string/highlight_touched_cell"
				android:summary="@string/highlight_touched_cell_summary"
				android:defaultValue="true"/>
	</hram.sudoku.view.MyPreferenceCategory>
</PreferenceScreen>
