<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFFFF"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView1"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="8dp"
            android:drawableLeft="@drawable/ic_warning"
            android:drawablePadding="8dp"
            android:text="@string/ooops"
            android:textColor="@android:color/holo_red_light"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/whats_happened"
            android:textColor="#727272"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="8dp"
            android:text="@string/whats_happened_exp"
            android:textColor="#212121"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/whats_next"
            android:textColor="#727272"
            android:textSize="20sp" />
        
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="8dp"
            android:text="@string/whats_next_exp"
            android:textColor="#212121"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/bt_try_again"
            style="@style/im_button"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/camera"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:duplicateParentState="true"
                android:gravity="center"
                android:text="@string/try_again"
                android:textColor="@color/contents_text"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bt_sent_email"
            style="@style/im_button"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/send_mail"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:duplicateParentState="true"
                android:gravity="center"
                android:text="@string/sent_email"
                android:textColor="@color/contents_text"
                android:textSize="25sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>